convert to spring boot project